// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders numeric value 1`] = `
<span
  aria-label="metric.has_rating_X.B"
  className="rating rating-B"
>
  B
</span>
`;

exports[`renders string value 1`] = `
<span
  aria-label="metric.has_rating_X.B"
  className="rating rating-B"
>
  B
</span>
`;

exports[`renders undefined value 1`] = `
<span
  aria-label="metric.no_rating"
>
  –
</span>
`;
